--- a/SportsSideKick/app/src/main/res/drawable/facebook_button.xml
+++ b/SportsSideKick/app/src/main/res/drawable/facebook_button.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="50dp" />
-    <solid android:color="@color/facebook_blue"/>
+    <gradient
+        android:angle="270"
+        android:endColor="#2d4881"
+        android:startColor="#4462a3" />
 </shape>
