--- a/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
@@ -248,7 +248,7 @@
                                 android:layout_marginTop="@dimen/margin_10">
 
                                 <RelativeLayout
-                                    android:id="@+id/bottom_buttons_container_login"
+                                    android:id="@+id/loginButton"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="@drawable/button_login_login"
