--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -225,38 +225,29 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <RelativeLayout
-                    android:id="@+id/bottom_buttons_container_login"
+                <Button
+                    android:id="@+id/loginButton"
+                    fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/standard_button_height"
                     android:layout_marginEnd="@dimen/margin_30"
                     android:layout_marginStart="@dimen/margin_30"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/button_login_login"
-                    android:clickable="true"
-                    android:visibility="visible">
+                    android:text="@string/sign_in"
+                    android:textColor="@color/black_alpha_70"
+                    android:textSize="@dimen/font_size_18" />
 
-                    <TextView
-                        android:id="@+id/login_text"
-                        fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/sign_in"
-                        android:textColor="@color/black_alpha_70"
-                        android:textSize="@dimen/font_size_18" />
-
-                    <ProgressBar
-                        android:id="@+id/login_progress_bar"
-                        android:layout_width="@dimen/prodgres_bar"
-                        android:layout_height="@dimen/prodgres_bar"
-                        android:layout_centerInParent="true"
-                        android:elevation="@dimen/elevation_2"
-                        android:theme="@style/AppTheme.BlackAccent"
-                        android:visibility="gone"
-                        tools:visibility="gone" />
-
-                </RelativeLayout>
+                <ProgressBar
+                    android:id="@+id/login_progress_bar"
+                    android:layout_width="@dimen/prodgres_bar"
+                    android:layout_height="@dimen/prodgres_bar"
+                    android:elevation="@dimen/elevation_2"
+                    android:layout_marginTop="-34dp"
+                    android:layout_gravity="center_horizontal"
+                    android:theme="@style/AppTheme.BlackAccent"
+                    android:visibility="gone"
+                    tools:visibility="gone" />
 
                 <RelativeLayout
                     android:id="@+id/bottom_buttons_container_reset"
