--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nextMatchOverlay"
@@ -13,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@id/waiting_connection"
-        android:background="@drawable/tiled_background_dense"/>
+        android:background="@drawable/tiled_background_dense" />
 
     <ImageView
         android:id="@+id/background"
@@ -21,7 +20,7 @@
         android:layout_height="match_parent"
         android:alpha="0.4"
         android:scaleType="centerCrop"
-        tools:src="@drawable/video_chat_background"/>
+        tools:src="@drawable/video_chat_background" />
 
     <RelativeLayout
         android:id="@+id/container"
@@ -56,7 +55,6 @@
             android:layout_gravity="center"
             android:layout_marginBottom="32dp"
             android:gravity="center"
-            tools:text="@string/slogan"
             android:textColor="@color/white"
             app:autoSizeMaxTextSize="70sp"
             app:autoSizeMinTextSize="20sp"
@@ -65,7 +63,8 @@
             app:layout_constraintBottom_toTopOf="@id/nextMatchContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/slogan" />
 
         <RelativeLayout
             android:id="@+id/nextMatchContainer"
@@ -108,24 +107,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="8dp"
                     android:gravity="end"
                     android:maxLines="1"
-                    android:layout_marginEnd="8dp"
-                    tools:text="BEN"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
                     android:textSize="20sp"
+                    android:textStyle="bold"
                     app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform" />
+                    app:autoSizeTextType="uniform"
+                    tools:text="BEN" />
 
                 <ImageView
                     android:id="@+id/logoOfFirstTeam"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
-                    tools:src="@drawable/sportingportugal"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/nameOfFirstTeam" />
+                    android:layout_toEndOf="@+id/nameOfFirstTeam"
+                    tools:src="@drawable/sportingportugal" />
 
                 <TextView
                     android:id="@+id/vs"
@@ -141,11 +140,11 @@
 
                 <ImageView
                     android:id="@+id/logoOfSecondTeam"
-                    tools:src="@drawable/sportingportugal"
                     android:layout_width="@dimen/width_60"
                     android:layout_height="@dimen/height_60"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/vs" />
+                    android:layout_toEndOf="@+id/vs"
+                    tools:src="@drawable/sportingportugal" />
 
                 <!-- SECOND TEAM   -->
                 <TextView
@@ -154,15 +153,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/logoOfSecondTeam"
                     android:layout_marginStart="8dp"
-                    tools:text="BEN"
-                    android:textSize="20sp"
+                    android:layout_toEndOf="@+id/logoOfSecondTeam"
+                    android:text="SCP"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     app:autoSizeStepGranularity="1sp"
-                    app:autoSizeTextType="uniform" />
+                    app:autoSizeTextType="uniform"
+                    tools:ignore="HardcodedText" />
             </RelativeLayout>
 
             <TextView
@@ -172,9 +172,9 @@
                 android:layout_below="@id/teams_info"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/margin_10"
-                tools:text="Sun 14 Dec"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_size_18" />
+                android:textSize="@dimen/font_size_18"
+                tools:text="Sun 14 Dec" />
 
             <TextView
                 android:id="@+id/countdown"
@@ -187,14 +187,14 @@
                 android:layout_marginBottom="@dimen/margin_20"
                 android:gravity="center"
                 android:maxLines="1"
-                tools:text="02:04:36:19"
                 android:text="00:00:00:00"
                 android:textColor="@color/colorAccent"
                 app:autoSizeMaxTextSize="160sp"
                 app:autoSizeMinTextSize="12sp"
                 app:autoSizeStepGranularity="1sp"
                 app:autoSizeTextType="uniform"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="02:04:36:19" />
 
         </RelativeLayout>
 
@@ -220,6 +220,6 @@
         android:text="@string/waiting_for_internet"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
