--- a/SportsSideKick/app/src/main/res/layout-large/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/friend_request_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/height_60">
 
     <ImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profileImage"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
@@ -18,7 +18,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_marginStart="@dimen/margin_20"
-        android:layout_toEndOf="@+id/profile_image"
+        android:layout_toEndOf="@+id/profileImage"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true">
     <TextView
