--- a/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
@@ -101,7 +101,7 @@
             android:layout_marginBottom="8dp"
 
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/profile_image"
+            android:layout_toEndOf="@+id/profileImage"
             android:background="@drawable/user_status_backgraound"
             android:padding="@dimen/padding_4"
             android:paddingEnd="@dimen/padding_12"
@@ -145,7 +145,7 @@
 
 
         <ImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/profileImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_centerHorizontal="true"
@@ -268,7 +268,7 @@
             android:layout_marginBottom="11dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintBottom_toBottomOf="@id/profileImage"
             app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintLeft_toLeftOf="@id/guideline3"
             app:layout_constraintRight_toLeftOf="@id/guideline4" />
