--- a/SportsSideKick/app/src/main/res/layout/row_image_offical_account.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_image_offical_account.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profileImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
