bind all views in main activity automatically

--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/activity_main"
+            android:id="@+id/rootView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/systemNavBarSpacer">
@@ -21,10 +21,10 @@
                 android:id="@+id/fragmentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/bottom_menu_recycler_view" />
+                android:layout_above="@id/bottomNavigationRecyclerView" />
 
             <RelativeLayout
-                android:id="@+id/left_top_bar_container"
+                android:id="@+id/leftTopBarContainer"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_72"
                 tools:layout_height="@dimen/height_48">
@@ -39,7 +39,7 @@
                     tools:paddingTop="0dp" />
 
                 <ImageView
-                    android:id="@+id/logo"
+                    android:id="@+id/logoImageView"
                     android:layout_width="@dimen/top_bar_logo_tema_size"
                     android:layout_height="match_parent"
                     android:layout_marginTop="24dp"
@@ -55,8 +55,8 @@
                     android:layout_above="@id/scrollingNewsSwitcher"
                     android:layout_marginBottom="-2dp"
                     android:layout_marginTop="2dp"
-                    android:layout_toEndOf="@+id/logo"
-                    android:layout_toStartOf="@+id/notification_open"
+                    android:layout_toEndOf="@+id/logoImageView"
+                    android:layout_toStartOf="@+id/notificationsButton"
                     android:textAllCaps="true"
                     android:textColor="?phoneLoungeTeamCaptionColor"
                     android:textSize="16sp"
@@ -68,8 +68,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/half_margin"
-                    android:layout_toEndOf="@+id/logo"
-                    android:layout_toStartOf="@+id/notification_open"
+                    android:layout_toEndOf="@+id/logoImageView"
+                    android:layout_toStartOf="@+id/notificationsButton"
                     android:animateLayoutChanges="true"
                     android:measureAllChildren="false"
                     android:paddingBottom="@dimen/half_margin"
@@ -87,12 +87,12 @@
                 </TextSwitcher>
 
                 <ImageView
-                    android:id="@+id/notification_open"
+                    android:id="@+id/notificationsButton"
                     android:layout_width="@dimen/top_bar_logo_tema_size"
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="24dp"
-                    android:layout_toStartOf="@+id/friends_open"
+                    android:layout_toStartOf="@+id/friendsButton"
                     android:padding="@dimen/half_margin"
                     android:scaleType="fitCenter"
                     android:src="@drawable/notif_icon"
@@ -100,7 +100,7 @@
                     tools:layout_marginTop="0dp" />
 
                 <ImageView
-                    android:id="@+id/friends_open"
+                    android:id="@+id/friendsButton"
                     android:layout_width="@dimen/top_bar_logo_tema_size"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
@@ -135,19 +135,19 @@
                 android:id="@+id/shadow"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/height_2"
-                android:layout_above="@id/bottom_menu_recycler_view"
+                android:layout_above="@id/bottomNavigationRecyclerView"
                 android:alpha="0.6"
                 android:background="@drawable/top_gradient_drawable" />
 
             <base.app.util.ui.NoScrollRecycler
-                android:id="@+id/bottom_menu_recycler_view"
+                android:id="@+id/bottomNavigationRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentBottom="true"
                 android:background="@color/white" />
 
             <RelativeLayout
-                android:id="@+id/fragment_popup_holder"
+                android:id="@+id/popupFragmentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_height="0dp" />
@@ -156,7 +156,7 @@
                 android:id="@+id/fragmentLeftPopupHolder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/bottom_menu_recycler_view"
+                android:layout_above="@id/bottomNavigationRecyclerView"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true" />
 
@@ -199,11 +199,11 @@
             </FrameLayout>
 
             <LinearLayout
-                android:id="@+id/fragment_radio_container"
+                android:id="@+id/radioFragmentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/bottom_menu_recycler_view"
-                android:layout_below="@id/left_top_bar_container"
+                android:layout_above="@id/bottomNavigationRecyclerView"
+                android:layout_below="@id/leftTopBarContainer"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -219,11 +219,11 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/fragment_tv_container"
+                android:id="@+id/tvFragmentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/bottom_menu_recycler_view"
-                android:layout_below="@id/left_top_bar_container"
+                android:layout_above="@id/bottomNavigationRecyclerView"
+                android:layout_below="@id/leftTopBarContainer"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -333,7 +333,7 @@
                             android:layout_centerInParent="true">
 
                             <ProgressBar
-                                android:id="@+id/user_level_progress"
+                                android:id="@+id/userLevelProgress"
                                 style="?android:attr/progressBarStyleHorizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
@@ -361,7 +361,7 @@
                                 android:src="?nextLevelMarkerIcon" />
 
                             <TextView
-                                android:id="@+id/user_level"
+                                android:id="@+id/userLevelTextView"
                                 android:layout_width="@dimen/profile_level_marker_size"
                                 android:layout_height="@dimen/profile_level_marker_size"
                                 android:layout_centerInParent="true"
@@ -413,7 +413,7 @@
                             android:textSize="@dimen/font_size_8" />
 
                         <TextView
-                            android:id="@+id/your_coins_value"
+                            android:id="@+id/coinsTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/you_have"
