--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/appBackground"
@@ -22,7 +22,7 @@
 
         <!-- TICKER -->
         <RelativeLayout
-            android:id="@+id/left_top_bar_container"
+            android:id="@+id/leftTopBarContainer"
             android:layout_width="@dimen/space_0"
             android:layout_height="@dimen/top_bar_height"
             android:layout_marginEnd="@dimen/half_margin"
@@ -422,7 +422,7 @@
                    android:src="?profileImageLoungeIcon" />
 
                <ProgressBar
-                   android:id="@+id/user_level_progress"
+                   android:id="@+id/userLevelProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
@@ -450,7 +450,7 @@
                    android:layout_marginTop="@dimen/margin_negative_20"/>
 
                <TextView
-                   android:id="@+id/user_level"
+                   android:id="@+id/userLevelTextView"
                    android:layout_width="@dimen/profile_level_marker_size"
                    android:layout_height="@dimen/profile_level_marker_size"
                    android:layout_alignEnd="@id/profileImage"
@@ -513,7 +513,7 @@
                android:textSize="@dimen/font_size_8" />
 
            <TextView
-               android:id="@+id/your_coins_value"
+               android:id="@+id/coinsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_coin_text"
