--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="colorAccentDark">#4ff70e</color>
-    <color name="colorAccentSemiDark">#c3ff00</color>
+    <color name="colorAccentSemiDark">#fbb912</color>
     <color name="colorAccent">#ffef16</color>
     <color name="textColorLink">#c9af01</color>
 
