--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
 
                 <TextView
                     android:id="@+id/caption"
+                    fontPath="fonts/TitilliumWeb-Bold.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_above="@id/scrollingNewsSwitcher"
