--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
 
             <RelativeLayout
                 android:id="@+id/fragmentHolder"
+                android:layout_below="@id/leftTopBarContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@id/bottomNavigationRecyclerView" />
